[package]
name = "rustlib"
version = "0.1.0"
authors = ["CGMossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
itertools = "0.9.0"
float_eq = "0.5.0"
rayon = "1.4.1"
derive_more = "0.99.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "kendall_tau_bench"
harness = false
