[package]
name = "rustlib"
version = "0.1.0"
authors = ["CGMossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
itertools = "0.9.0"
float_eq = "0.5.0"
rayon = { version = "1.4.1", optional = true }
derive_more = "0.99.10"
wide = "0.5.5"
ndarray = { version = "0.13.1"}
#ndarray = { version = "0.13.1", features = ["rayon"]}
statrs = "0.13.0"
ndarray-csv = "0.4.1"
csv = "1.1.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "kendall_tau_bench"
harness = false

[[bench]]
name = "kendall_tau_mat_bench"
harness = false
